@@ -7,13 +7,14 @@ import com.kllhy.roadmap.roadmap.domain.event.SubTopicEventOccurred;
 import com.kllhy.roadmap.roadmap.domain.event.TopicEventOccurred;
 import com.kllhy.roadmap.roadmap.domain.event.enums.ActiveStatus;
 import com.kllhy.roadmap.roadmap.domain.event.enums.EventType;
+import com.kllhy.roadmap.roadmap.domain.event.listener.RoadMapEntityListener;
 import com.kllhy.roadmap.roadmap.domain.exception.RoadMapIErrorCode;
 import com.kllhy.roadmap.roadmap.domain.model.creation_spec.CreationRoadMap;
 import com.kllhy.roadmap.roadmap.domain.model.creation_spec.CreationTopic;
 import com.kllhy.roadmap.roadmap.domain.model.update_spec.UpdateRoadMap;
-import com.kllhy.roadmap.roadmap.domain.model.update_spec.UpdateTopic;
 import jakarta.persistence.*;
 import java.sql.Timestamp;
+import java.time.Instant;
 import java.util.*;
 import java.util.stream.Collectors;
 import lombok.AccessLevel;
@@ -23,6 +24,7 @@ import lombok.NoArgsConstructor;
 @Entity
 @Table(name = "road_map")
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
+@EntityListeners(RoadMapEntityListener.class)
 public class RoadMap extends AggregateRoot {
 
     @Column(name = "uuid", nullable = false, unique = true)
@@ -52,11 +54,7 @@ public class RoadMap extends AggregateRoot {
     @Getter
     private Long categoryId;
 
-    @OneToMany(
-            mappedBy = "roadMap",
-            cascade = CascadeType.ALL,
-            orphanRemoval = true,
-            fetch = FetchType.LAZY)
+    @OneToMany(mappedBy = "roadMap", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
     private List<Topic> topics = new ArrayList<>();
 
     private RoadMap(
@@ -88,7 +86,7 @@ public class RoadMap extends AggregateRoot {
                 creationSpec.creationTopics().stream()
                         .map(Topic::create)
                         .sorted(Comparator.comparing(Topic::getOrder))
-                        .toList();
+                        .collect(Collectors.toList());
         validateTopics(createdTopics);
 
         RoadMap created =
@@ -103,45 +101,7 @@ public class RoadMap extends AggregateRoot {
         // 양방향 연결
         created.topics.forEach(topic -> topic.setRoadMap(created));
 
-        // RoadMap Event
-        addCreateOrUpdateEvents(created);
-
         return created;
-    }
-
-    private static void addCreateOrUpdateEvents(RoadMap created) {
-        ActiveStatus roadMapActiveStatus =
-                created.isDraft ? ActiveStatus.INACTIVE : ActiveStatus.ACTIVE;
-        EventType roadMapEventType =
-                created.getId() == null ? EventType.CREATED : EventType.UPDATED;
-        created.addDomainEvent(
-                new RoadMapEventOccurred(created.uuid, roadMapEventType, roadMapActiveStatus));
-
-        for (Topic topic : created.topics) {
-            // Topic Event
-            ActiveStatus topicActiveStatus =
-                    topic.isDraft() ? ActiveStatus.INACTIVE : ActiveStatus.ACTIVE;
-            EventType topicEventType =
-                    topic.getId() == null ? EventType.CREATED : EventType.UPDATED;
-            created.addDomainEvent(
-                    new TopicEventOccurred(
-                            created.uuid, topic.getUuid(), topicEventType, topicActiveStatus));
-
-            // SubTopic Event
-            for (SubTopic subTopic : topic.getSubTopics()) {
-                ActiveStatus subTopicActiveStatus =
-                        subTopic.getIsDraft() ? ActiveStatus.INACTIVE : ActiveStatus.ACTIVE;
-                EventType subTopicEventType =
-                        subTopic.getId() == null ? EventType.CREATED : EventType.UPDATED;
-                created.addDomainEvent(
-                        new SubTopicEventOccurred(
-                                created.uuid,
-                                topic.getUuid(),
-                                subTopic.getUuid(),
-                                EventType.CREATED,
-                                ActiveStatus.ACTIVE));
-            }
-        }
     }
 
     public void update(UpdateRoadMap updateSpec) {
@@ -157,37 +117,104 @@ public class RoadMap extends AggregateRoot {
         this.categoryId = updateSpec.categoryId();
 
         updateTopics(updateSpec);
+
+        // 로드맵 업데이트 이벤트 트리거
+        roadMapUpdated();
     }
 
     private void updateTopics(UpdateRoadMap updateSpec) {
-        Map<Long, Topic> remainingTopics =
+
+        Map<Long, Topic> wouldBeRemovedTopic =
                 topics.stream()
                         .filter(topic -> topic.getId() != null)
                         .collect(Collectors.toMap(Topic::getId, topic -> topic));
 
-        List<Topic> sortedUpdatedTopics =
-                updateSpec.updateTopics().stream()
-                        .sorted(Comparator.comparing(UpdateTopic::order))
-                        .map(
-                                spec -> {
-                                    if (spec.id() != null) {
-                                        Topic existing = remainingTopics.remove(spec.id());
-                                        if (existing == null) {
-                                            throw new IllegalArgumentException(
-                                                    "RoadMap.update: 존재하지 않는 Topic id 입니다.");
-                                        }
-                                        existing.update(spec);
-                                        return existing;
-                                    }
-                                    return Topic.create(spec);
-                                })
-                        .toList();
+        updateSpec
+                .updateTopics()
+                .forEach(
+                        spec -> {
+                            if (spec.id() != null) {
+                                Topic existingTopic = wouldBeRemovedTopic.remove(spec.id());
+                                if (existingTopic == null) {
+                                    throw new IllegalArgumentException(
+                                            "RoadMap.update: 존재하지 않는 Topic id 입니다.");
+                                }
+                                existingTopic.update(spec);
+                            }
+                            topics.add(Topic.create(spec));
+                        });
 
-        validateTopics(sortedUpdatedTopics);
-        topics = sortedUpdatedTopics;
+        topics.forEach(Topic::softDelete);
+        topics.sort(Comparator.comparing(Topic::getOrder));
+        validateTopics(topics);
 
         // 역방향 연결
         topics.forEach(topic -> topic.setRoadMap(this));
+    }
+
+    private void triggerTopicEvent(Topic topic) {
+        if (topic.isDeletedEventAvailable()) {
+            addDomainEvent(
+                    new TopicEventOccurred(
+                            id,
+                            topic.getId(),
+                            EventType.DELETED,
+                            topic.isDraft() ? ActiveStatus.INACTIVE : ActiveStatus.ACTIVE));
+
+            return;
+        }
+
+        if (topic.isUpdatedEventAvailable()) {
+            addDomainEvent(
+                    new TopicEventOccurred(
+                            id,
+                            topic.getId(),
+                            EventType.UPDATED,
+                            topic.isDraft() ? ActiveStatus.INACTIVE : ActiveStatus.ACTIVE));
+        }
+
+        for (SubTopic subTopic : topic.getSubTopics()) {
+            triggerSubTopicEvent(subTopic);
+        }
+    }
+
+    private void triggerSubTopicEvent(SubTopic subTopic) {
+        EventType eventType = null;
+        // update flag 는 delete flag 에 덮어 씌워짐
+        // 두 flag 를 한 번에 모두 읽어야 함
+        if (subTopic.isUpdatedEventAvailable()) {
+            eventType = EventType.UPDATED;
+        }
+        if (subTopic.isDeletedEventAvailable()) {
+            eventType = EventType.DELETED;
+        }
+        addDomainEvent(
+                new SubTopicEventOccurred(
+                        id,
+                        subTopic.getTopic().getId(),
+                        subTopic.getId(),
+                        eventType,
+                        subTopic.getIsDraft() ? ActiveStatus.INACTIVE : ActiveStatus.ACTIVE));
+    }
+
+    private void roadMapUpdated() {
+        addDomainEvent(
+                new RoadMapEventOccurred(
+                        id,
+                        EventType.UPDATED,
+                        isDraft ? ActiveStatus.INACTIVE : ActiveStatus.ACTIVE));
+
+        for (Topic topic : topics) {
+            triggerTopicEvent(topic);
+        }
+    }
+
+    private void roadMapDeleted() {
+        addDomainEvent(
+                new RoadMapEventOccurred(
+                        id,
+                        EventType.DELETED,
+                        isDraft ? ActiveStatus.INACTIVE : ActiveStatus.ACTIVE));
     }
 
     private static void validateTitle(String title) {
@@ -215,6 +242,7 @@ public class RoadMap extends AggregateRoot {
             throw new IllegalArgumentException("RoadMap.validateTopics: topics 가 blank 임");
         }
 
+        int cur = 0;
         for (int i = 0; i < topics.size(); i++) {
             if (topics.get(i).getOrder() != (i + 1)) {
                 throw new IllegalArgumentException(
@@ -230,6 +258,12 @@ public class RoadMap extends AggregateRoot {
             throw new IllegalArgumentException(
                     "RoadMap.validateTopics: RoadMap 에 속한 Topic 의 title 은 고유해야 합니다.");
         }
+    }
+
+    public void softDelete() {
+        this.isDeleted = true;
+        this.deletedAt = Timestamp.from(Instant.now());
+        roadMapDeleted();
     }
 
     public RoadMap cloneAsIs(long userId) {
